@@ -182,14 +182,14 @@ exec_elf_check(struct exec_params *epp)
          */
         if (!((epp->text.vaddr != NO_ADDR
                && ((caddr_t)ph[i].p_vaddr >= epp->text.vaddr
-               && (caddr_t)ph[i].p_vaddr + ph[i].p_filesz <= epp->text.vaddr + epp->text.len))
+                   && (caddr_t)ph[i].p_vaddr + ph[i].p_filesz <= epp->text.vaddr + epp->text.len))
               || (epp->data.vaddr != NO_ADDR
-              && (caddr_t)ph[i].p_vaddr >= epp->data.vaddr
-              && (caddr_t)ph[i].p_vaddr + ph[i].p_filesz <= epp->data.vaddr + epp->data.len))
+                  && (caddr_t)ph[i].p_vaddr >= epp->data.vaddr
+                  && (caddr_t)ph[i].p_vaddr + ph[i].p_filesz <= epp->data.vaddr + epp->data.len))
             || ph[i].p_filesz >= ph[i].p_memsz || ph[i].p_filesz <= 0)
-            return ENOEXEC;
+                return ENOEXEC;
 
-            error = rdwri(UIO_READ, epp->ip, (caddr_t)ph[i].p_vaddr, ph[i].p_filesz, ph[i].p_offset, IO_UNIT, 0);
+        error = rdwri(UIO_READ, epp->ip, (caddr_t)ph[i].p_vaddr, ph[i].p_filesz, ph[i].p_offset, IO_UNIT, 0);
     }
 
     exec_clear(epp);
